Update Ubuntu_setup.sh